--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "可知知传链PHP-SDK",
     "type": "library",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "JiangZhibin",
